syntax = "proto3";

option csharp_namespace = "GrpcFileServer";

package file;
import "google/protobuf/empty.proto"; //Geriye dönüþ deðeri olmayan metotlar için kullanýyoruz.

service FileService {
    rpc FileDownLoad (FileInfo) returns (stream BytesContent); //server streaming
    rpc FileUpLoad (stream BytesContent) returns(google.protobuf.Empty); //client streaming
    rpc GetFilePath (FileInfo) returns (FilePath); //unary
}

message FileInfo{
    string fileName = 1;
    string fileExtension = 2;
}

message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfo info = 4;
}

message FilePath{
    string filePath = 1;
}